--- a/Yukari/src/main/res/menu/profile.xml
+++ b/Yukari/src/main/res/menu/profile.xml
@@ -1,18 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:title="フォロー管理" app:showAsAction="always" app:actionLayout="@layout/menu_profile_manage_follow"/>
-    <item android:title="スクリーンネームで検索" app:showAsAction="always" android:icon="@drawable/ic_search_d"/>
-    <item android:title="ツイートを送る"/>
-    <item android:title="DMを送る"/>
-    <item android:title="ブラウザで開く"/>
-    <item android:title="保存しているリスト"/>
-    <item android:title="追加されているリスト"/>
-    <item android:title="リストへ追加/削除"/>
-    <item android:title="ミュートする"/>
-    <item android:title="カラーラベルを設定"/>
-    <item android:title="プロフィール編集"/>
-    <item android:title="ブロックリスト"/>
-    <item android:title="優先アカウントを設定 (未設定)"/>
-    <item android:title="優先アカウントを解除"/>
+    <item
+        android:id="@+id/action_manage_follow"
+        android:title="フォロー管理"
+        app:showAsAction="ifRoom"
+        app:actionLayout="@layout/menu_profile_manage_follow"/>
+    <item
+        android:id="@+id/action_search"
+        android:title="スクリーンネームで検索"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_search_d"/>
+    <item
+        android:id="@+id/action_send_mention"
+        android:title="ツイートを送る"/>
+    <item
+        android:id="@+id/action_send_message"
+        android:title="DMを送る"/>
+    <item
+        android:id="@+id/action_browser"
+        android:title="ブラウザで開く"/>
+    <item
+        android:id="@+id/action_following_list"
+        android:title="保存しているリスト"/>
+    <item
+        android:id="@+id/action_membership_list"
+        android:title="追加されているリスト"/>
+    <item
+        android:id="@+id/action_manage_list"
+        android:title="リストへ追加/削除"/>
+    <item
+        android:id="@+id/action_mute"
+        android:title="ミュートする"/>
+    <item
+        android:id="@+id/action_set_color_label"
+        android:title="カラーラベルを設定"/>
+    <item
+        android:id="@+id/action_edit_profile"
+        android:title="プロフィール編集"
+        android:visible="false"/>
+    <item
+        android:id="@+id/action_block_list"
+        android:title="ブロックリスト"
+        android:visible="false"/>
+    <item
+        android:id="@+id/action_set_priority"
+        android:title="優先アカウントを設定 (未設定)"
+        android:visible="false"/>
+    <item
+        android:id="@+id/action_unset_priority"
+        android:title="優先アカウントを解除"
+        android:visible="false"/>
 </menu>
